--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -21,12 +21,16 @@ jobs:
           token: ${{ secrets.GITHUB_TOKEN }}
           fetch-depth: 0
 
-      # 2. Setup Node.js
+      - name: Setup pnpm
+        uses: pnpm/action-setup@v4
+        with:
+          version: 9
+
       - name: Setup Node.js
         uses: actions/setup-node@v4
         with:
-          node-version: '20.19.0'  # Match Angular requirements
-          cache: 'pnpm'            # Cache pnpm dependencies
+          node-version: '20.19.0'
+          cache: 'pnpm'
 
       # 3. Setup pnpm
       - name: Setup pnpm
@@ -36,7 +40,7 @@ jobs:
 
       # 4. Install dependencies using pnpm
       - name: Install dependencies
-        run: pnpm install
+        run: pnpm install --frozen-lockfile
 
       # 5. Build production version
       - name: Build production version
