--- a/angular.json
+++ b/angular.json
@@ -13,11 +13,13 @@
         "build": {
           "builder": "@angular/build:application",
           "options": {
-            "outputPath": "dist/github-portfolio",
+            "outputPath": "dist/portfolio",
             "index": "src/index.html",
             "browser": "src/main.ts",
-            "baseHref": "/github-portfolio/",
-            "polyfills": ["zone.js"],
+            "baseHref": "/portfolio/",
+            "polyfills": [
+              "zone.js"
+            ],
             "tsConfig": "tsconfig.app.json",
             "assets": [
               "src/favicon.ico",
@@ -37,7 +39,9 @@
                 "output": "."
               }
             ],
-            "styles": ["src/styles.css"],
+            "styles": [
+              "src/styles.css"
+            ],
             "scripts": []
           },
           "configurations": {
@@ -79,8 +83,8 @@
         "deploy": {
           "builder": "angular-cli-ghpages:deploy",
           "options": {
-            "baseHref": "/github-portfolio/",
-            "dir": "dist/github-portfolio/browser"
+            "baseHref": "/portfolio/",
+            "dir": "dist/portfolio/browser"
           }
         }
       }
