--- a/package.json
+++ b/package.json
@@ -11,7 +11,7 @@
     "build": "ng build",
     "watch": "ng build --watch --configuration development",
     "test": "ng test",
-    "deploy": "ng deploy --base-href=/github-portfolio/"
+    "deploy": "ng deploy --base-href=/portfolio/"
   },
   "private": true,
   "dependencies": {
