--- a/package.json
+++ b/package.json
@@ -24,6 +24,9 @@
     "@angular/platform-browser-dynamic": "^21.1.0",
     "@angular/router": "^21.1.0",
     "gsap": "^3.12.7",
+    "iconify-icon": "^3.0.2",
+    "lucide-angular": "^0.563.0",
+    "ng2-pdf-viewer": "^10.4.0",
     "rxjs": "~7.8.2",
     "tslib": "^2.3.0",
     "zone.js": "~0.16.0"
